[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UI/Menus/Characters/CharacterSelector.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/Menus/Characters/CharacterCreator.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/Elements/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/Menus/Characters/CharacterMenu.gd" type="Script" id=6]

[node name="CharacterMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterSelector" parent="." instance=ExtResource( 1 )]

[node name="CharacterCreator" parent="." instance=ExtResource( 2 )]
visible = false

[node name="LogOutButton" parent="." instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -248.0
margin_top = -112.0
margin_right = -32.0
margin_bottom = -32.0
text = "Log out"
flat = true
[connection signal="character_deletion_requested" from="CharacterSelector" to="." method="_on_CharacterSelector_character_deletion_requested"]
[connection signal="create_pressed" from="CharacterSelector" to="." method="_on_CharacterSelector_create_pressed"]
[connection signal="login_pressed" from="CharacterSelector" to="." method="_on_CharacterSelector_login_pressed"]
[connection signal="new_character_requested" from="CharacterCreator" to="." method="_on_CharacterCreator_new_character_requested"]
[connection signal="pressed" from="LogOutButton" to="." method="_on_LogOutButton_pressed"]
